# dataset2bag

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/: PrettyIFStream.hpp  dataset2bag.cpp  parameters.txt
